# sdff

./: .copier-answers.yml  .editorconfig  .gitignore  Makefile  README.md  entangled.toml  mkdocs.yml  pyproject.toml
.entangled/: filedb.json
.entangled/repl-session/: checkers.json  checkers.out.json  python-ch2.json  python-ch2.out.json  scheme-ch2.json  scheme-ch2.out.json
.github/workflows/: pages.yml
docs/: ch2-4-checkers.md  ch2-dsl.md  index.md  monads.md  parsing.md  rtf.md  utility.md
python/sdff/: __init__.py  combinators.py  draughts.py
scheme/: checkers.scm  combinators.scm  functional.scm  invertibles.scm  rtf.scm  units.scm  utility.scm  yasos.scm
scheme/monads/: maybe.scm  monads.scm  support.scm  syntax.scm
scheme/parsing/: lists.scm  parsing.scm  text-cursors.scm
scheme/srfi/: :241.sls
scheme/std/: cut.scm  format.scm  match.scm  receive.scm
scheme/utility/: algorithms.scm  aux-keyword.scm
test/: test-monads.scm  test-parsing.scm  test-utility.scm
