[project]
name = "sdff"
version = "0.1.0"
description = "Virtual env for running entangled and building docs."
authors = ["Johan Hidding"]
# You may still want to add a license here
# license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "entangled-cli>=2.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-entangled-plugin>=0.5.0",
    "mkdocs-material>=9.6.21",
    "repl-session",
]

[tool.uv.sources]
repl-session = { path = "../../../../home/johannes/Projects/entangled/repl-session" }
