[project]
name = "sdff"
version = "0.1.0"
description = "Virtual env for running entangled and building docs."
# You may still want to add a license here
# license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "entangled-cli>=2.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-entangled-plugin>=0.5.0",
    "mkdocs-material>=9.6.21",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "sdff"
module-root = "python"
source-exclude = ["site", "scheme"]
